--- a/index.html
+++ b/index.html
@@ -2,9 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Simple Simon</title>
 </head>
 <body>
 
+<!-- Page Title -->
+
+<!-- Create 4 divs to display the sequence Simple Simon generates and user to click on -->
+
+<!-- Create a start button -->
+
+<!-- Label for the round that you are currently on -->
+
+<script>
+    (function() {
+        "use strict";
+
+        //Allow user to start the game by clicking on the start button
+
+        //Once start is clicked, Simon will generate and display a step for user to follow/repeat.
+
+        //Allow user to repeat pattern that was shown
+
+            //If user is correct in pattern given, update the round that the user in in
+            // allow Simon to generate an additional step to add on the existing pattern
+
+            //If user fail, alert will be given and Simon pattern will be reset until user starts new game.
+
+    })();
+</script>
 </body>
 </html>
