Minor styling updates

--- a/index.html
+++ b/index.html
@@ -29,6 +29,18 @@
     <p><strong id="top-score">Your Top Score: </strong><span ><strong id="score">0</strong></span></p>
 </div>
 
+<!-- Create a start button -->
+<div class="start-container">
+    <button id="start-btn">New Game</button>
+</div>
+
+<!-- Label for the round that you are currently on -->
+
+<div class="round-label transparent">
+    <p><strong id="current-round">Current Round: </strong></p>
+    <p><span ><strong id="round" class="round-animate">1</strong></span></p>
+</div>
+
 <!-- Create 4 divs to display the sequence Simple Simon generates and user to click on -->
 
 <div class="container">
@@ -40,17 +52,6 @@
     </div>
 </div>
 
-<!-- Create a start button -->
-<div class="start-container">
-    <button id="start-btn">New Game</button>
-</div>
-
-<!-- Label for the round that you are currently on -->
-
-<div class="round-label">
-    <p><strong id="current-round">Current Round: </strong></p>
-    <p><span ><strong id="round" class="round-animate">1</strong></span></p>
-</div>
 
 
 <!-- JQuery -->
