Bug fix: border does not glitch anymore.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <span id="p">p</span>
     <span id="l">l</span>
     <span id="e">e</span>
+    &nbsp;
     <span id="S-simon">S</span>
     <span id="i-simon">i</span>
     <span id="m-simon">m</span>
@@ -24,7 +25,6 @@
 </h1>
 
 <!-- your top score -->
-
 <div class="score-tracker transparent">
     <p><strong id="top-score">Your Top Score: </strong><span ><strong id="score">0</strong></span></p>
 </div>
@@ -35,14 +35,12 @@
 </div>
 
 <!-- Label for the round that you are currently on -->
-
 <div class="round-label transparent">
     <p><strong id="current-round">Current Round: </strong></p>
-    <p><span ><strong id="round" class="round-animate">1</strong></span></p>
+    <p><span id="round" class="round-animate"><strong>1</strong></span></p>
 </div>
 
 <!-- Create 4 divs to display the sequence Simple Simon generates and user to click on -->
-
 <div class="container">
     <div id="boxes">
         <div class="box red red-intro" data-value="1"></div>
